--- a/001.HTML/000.T_Pj/1.Dune_Pj/Dune.css
+++ b/001.HTML/000.T_Pj/1.Dune_Pj/Dune.css
@@ -21,7 +21,9 @@ body {
     background: url(./imgDune/bg.jpg)no-repeat fixed center/cover;
     font-family: 'Hahmlet', serif;
     overflow-x: hidden;
-}
+    -webkit-scrollbar :none;
+        
+    }
 
 .scb::-webkit-scrollbar {
     width: 5px;
