--- a/001.HTML/000.T_Pj/2.Lego_PJ/main.css
+++ b/001.HTML/000.T_Pj/2.Lego_PJ/main.css
@@ -279,17 +279,53 @@ h1.tit{
 
 #info address{
     color: #fff;
+    background-color: #000;
     font-style: normal;
     font-family: 'Wendy One', sans-serif;
-    font-size: 18px;
+    font-size: 17px;
     line-height: 20px;
-
-    padding-top: 20px;
-    padding-left: 20px;
+    padding-top: 41px;
+    padding-left: 35px;
 }
 
 #info img{
     float: left;
-    /* margin: 0 auto; */
-    /* margin-right: 20px; */
+    margin-right: 20px;
+}
+
+.sns {
+    position: relative;
+    top: -98px;
+    right: -973px;
+}
+
+.sns li{
+    width: 40px;
+    height: 34px;
+    background: url(./img/sns.jpg) no-repeat;
+    /* margin: 2px; */
+    filter: grayscale(100%);
+}
+
+.sns li:first-child {
+    background-position: -40px -25px;
+}
+.sns li:nth-child(2) {
+    background-position: -100px -25px;
+}
+.sns li:nth-child(3) {
+    background-position: -160px -25px;
+}
+.sns li:nth-child(4) {
+    background-position: -220px -25px;
+}
+
+.sns a{
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.sns li:hover{
+    filter: grayscale(0%);
 }
