--- a/001.HTML/008.VOGUE_PJ/002.site/css/common.css
+++ b/001.HTML/008.VOGUE_PJ/002.site/css/common.css
@@ -32,7 +32,33 @@
     text-align: center;
     vertical-align: top;
     /* 인라인요소간 세로정렬(top-윗줄맞춤) */
+
+    /* 위치조정 */
+    margin-top: 15px;
+    margin-right: 16px;
+
+    /* 트랜지션 */
+    transition: opacity .2s;
 }
+/* a요소 마우스 오버시 */
+.sns a:hover{
+    opacity: 0.8;
+}
+
+/* 트위터 아이콘박스 */
+.sns a.fi-twitter{
+    font-size: 13px;
+}
+/* 유튜브 아이콘박스 */
+.sns a.fi-youtube-play{
+    font-size: 11px;
+}
+/* sns 마지막 a요소에 카스 이미지 넣기 */
+.sns a:last-child{
+    background: url(../images/sns_kakao.png) no-repeat center/cover;
+}
+
+
 /************************************** 1-1-2. 사이드메뉴 ***********************************/
 
 /************************************** 1-2.로고박스 ***********************************/
