--- a/001.HTML/000.T_Pj/2.Lego_PJ/main.css
+++ b/001.HTML/000.T_Pj/2.Lego_PJ/main.css
@@ -238,62 +238,23 @@ h1.tit{
     height: 100px;
 }
 
-#enter {
+#enter a {
     position: absolute;
-    top: 10%;
-    left: 1%;
+    top: 9%;
+    left: 1.5%;
     display: block;
     text-align: center;
-    font-family: 'Montserrat Subrayada', sans-serif;
+    font-family: 'Wendy One', sans-serif;
     transition: all .4s ease-out .2s;
-    color: red;
+    color: #065fd4;
     text-decoration: none;
 }
 
-#enter:hover{
+#enter:hover a{
     transform: scale(2);
     color: #ffee00;
 }
 
-
-/* .list ul>li{
-    position: relative;
-    width: 14.66%;
-    margin: 0 1%;
-    overflow: hidden;
-}
-
-.list img{
-    width: 100%;
-}
-
-.txt{
-    position: absolute;
-    top: 100%;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.562);
-    font-family: 'Wendy One', sans-serif;
-    font-size: 14px;
-    line-height: 25;
-    text-align: center;
-    transition: top .4s ease-in-out;
-}
-
-.list>ul>li:hover .txt{
-    top: 0;
-}
-
-.txt li{
-    float: none;
-}
-
-.txt li:first-child{
-    color: cyan;
-    font-size: 17px;
-    letter-spacing: -1px;
-    margin-top: 30%;
-} */
 /* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ하단ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ */
 #info{
     position: relative;
