--- a/001.HTML/000.T_Pj/2.Lego_PJ/main.css
+++ b/001.HTML/000.T_Pj/2.Lego_PJ/main.css
@@ -240,8 +240,8 @@ h1.tit{
 }
 .cha2 {
     position: absolute;
-    bottom: 86%;
-    left: 92%;
+    bottom: 86.5%;
+    left: 91.6%;
 }
 
 .cha2 img {
@@ -251,25 +251,26 @@ h1.tit{
     height: 100px;
 }
 
-#enter1 a {
+.cha1 span {
     position: absolute;
-    top: 9%;
-    left: 1.5%;
+    bottom: 10%;
+    left: 8%;
     display: block;
     text-align: center;
     font-family: 'Wendy One', sans-serif;
-    transition: all .4s ease-out .2s;
-    color: #065fd4;
+    transition: all .2s ease-in-out .2s;
+    color: #eeff00;
     text-decoration: none;
+    font-size: 30px;
 }
 
-#enter1:hover a{
-    transform: scale(2);
-    color: #ffee00;
+.cha1:hover span{
+    transform: scale(1.5);
+    color: #00e1ff;
 }
 
 
-#enter2 a {
+/* #enter2 a {
     position: absolute;
     top: 9%;
     left: 93.6%;
@@ -277,9 +278,9 @@ h1.tit{
     text-align: center;
     font-family: 'Wendy One', sans-serif;
     transition: all .4s ease-out .2s;
-    color: #065fd4;
+    color: #f7f304;
     text-decoration: none;
-}
+} */
 
 #cont>.cha2 img:first-of-type{
    transform: rotateY(90deg);
