--- a/001.HTML/008.VOGUE_PJ/002.site/css/common.css
+++ b/001.HTML/008.VOGUE_PJ/002.site/css/common.css
@@ -195,6 +195,31 @@
     color: red;
 }
 
+/* 모바일 메뉴 */
+.ham{
+    position: absolute;
+    top: 25px;
+    left: 11px;
+    font-size: 28px;
+    font-weight: bold;
+    transform: scaleX(1.4);
+    line-height: 0;
+    display: none;
+}
+/* 돋보기 버튼 */
+.mag{
+    position: absolute;
+    top: 25px;
+    right: 11px;
+    line-height: 0;
+    font-weight: bold;
+    transform: scale(1.24);
+    display: none;
+}
+/* 모바일메뉴박스 */
+#mobx{
+    display: none;
+}
 /************************************************* 3. 하단영역 *************************************************/
 .info {
     min-height: 285px;
