--- a/001.HTML/008.VOGUE_PJ/002.site/css/media.css
+++ b/001.HTML/008.VOGUE_PJ/002.site/css/media.css
@@ -3,6 +3,22 @@
 
 /************************* 모바일기준 500px 이하 *************************/
 @media only screen and (max-width: 500px){
+/* 상단영역고정 */
+body{
+    padding-top: 55px;
+    /* 상단영역만큼 공백을 줌 */
+}
+/* 상단영역 최상위부모 */
+#top{
+    position: fixed;
+    top: 0;
+    /* body 패딩탑 때문에 꼭줘야함 */
+}
+/* 모바일일때 상단메뉴 고정시 메뉴 스크롤되게 하기 */
+#top.mob{/* .mob클래스 추가시 적용 */
+    height: 100vh;
+    overflow-y: scroll;
+}
 
 /* [ 보그 모바일 변경사항 ] */
 /*  */
@@ -23,6 +39,8 @@
 /* 4) 상단영역 min-height:auto */
 .top{
     min-height: auto;
+    background-color: #fff;
+    /* 아래쪽 요소가 비춰 보이므로 줘야함 */
 }
 /* 5) 햄버거, 검색버튼 보이기(만들어야함) */
 .ham,.mag{
@@ -31,6 +49,7 @@
 /* 2. 컨텐츠 영역 */
 /*  */
 /* 1) 1개짜리 박스 */
+
 /* - 배경이미지 b형으로 변경 */
 /* 컨텐츠1 - 1개 */
 .bg1{
