--- a/Pj_BIFF/main.css
+++ b/Pj_BIFF/main.css
@@ -7,11 +7,19 @@ h2 {
     margin: 0;
     padding: 0;
 }
+ul,ol{
+    list-style: none;
+}
+
+a {
+    color: #000;
+    text-decoration: none;
+}
 
 body * {
     outline: 1px dashed rgb(158, 158, 158);
 }
-
+/******************************************* 상단 *******************************************/
 .ibx {
     max-width: 1300px;
     margin: 0 auto;
@@ -22,16 +30,30 @@ body * {
     top: 0;
     left: 0;
     width: 100%;
-    height: 60px;
-    background-color: rgba(126, 107, 107, 0.438);
+    height: 50px;
+    background-color: #e9282061;
 }
 
 .logo img{
     width: 45px;
     height: 45px;
+    margin-left: 50%;
     border-radius: 50%;
 }
 
+.logo ul{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center
+}
+
+.logo li{
+    font-size: 15px;
+}
+
+
+/******************************************* Cont1 *******************************************/
 .Mvideo {
     width: 100%;
     height: 100%;
