--- a/Pj_BIFF/main.css
+++ b/Pj_BIFF/main.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
 
+/******************************************* 공통 *******************************************/
 html,
 body,
 h1,
@@ -32,25 +33,43 @@ body * {
     width: 100%;
     height: 50px;
     background-color: #e9282061;
+    z-index: 999;
 }
 
-.logo img{
+.log{
+    top: 5%;
+    left: 50%;
+    position: absolute;
     width: 45px;
     height: 45px;
-    margin-left: 50%;
+    text-align: center;
     border-radius: 50%;
 }
 
 .logo ul{
-    margin: 0;
-    padding: 0;
+    width: 70%;
+    margin: 0 auto;
+    padding-top: 5px;
     display: flex;
-    justify-content: center
+    justify-content: space-between;
+}
+
+.logo>.lb{
+    width: 500px;
+    /* left: 0; */
+}
+
+.logo>.rb{
+    width: 250px;
+    /* right: 0; */
 }
 
 .logo li{
     font-size: 15px;
 }
+
+
+
 
 
 /******************************************* Cont1 *******************************************/
