--- a/001.HTML/008.VOGUE_PJ/002.site/css/common.css
+++ b/001.HTML/008.VOGUE_PJ/002.site/css/common.css
@@ -5,6 +5,11 @@
             하단영역(하단로고,회사정보)
 */
 
+/* 부드러운 스크롤 */
+html{
+    scroll-behavior: smooth;
+}
+
 /************************************************* 1. 상단영역 *************************************************/
 /* 겉박스 */
 #top{
@@ -19,10 +24,18 @@
 }
 
 /* #top에 클래스가 "on" 넣을 경우 슬림 사이즈 상단영역변경 */
+/* 상단영역 화면에 고정하기 */
+#top.on{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+}
     
 /* 중앙박스에 최소높이값 없앰 */
 #top.on .top{
-    min-width: auto;
+    min-height: auto;
 }
 
 /* 로고 포지션 등 변경 */
@@ -36,13 +49,31 @@
 /* 로고이미지 가로크기변경 */
 #top.on .logo img{
     width: 100px;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+/* GNB 글자조정 */
+#top.on .gnb{
+    font-size: 14px;
+    line-height: 50px;
+    margin-top: 0;
+    margin-left: 125px;
+}
+
+#top.on .gnb li{
+    padding-right: 35px;
+}
+
+#top.on .gnb a{
+    color: #333;
 }
 
 /* 상단메뉴 없애기 */
 #top.on .tmenu{
     display: none;
 }
-/* 위츼 모든 슬림메뉴 변경은 #top에 .on을 준 경우 적용 */
+/* 위의 모든 슬림메뉴 변경은 #top에 .on을 준 경우 적용 */
 
 
 /************** 1-1.상단메뉴 ************/
@@ -185,7 +216,7 @@
 .gnb {
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 16px;
-    line-height: 40px;
+    line-height: 0px;
     margin-top: 11px;
     padding: 0 30px;
 }
@@ -420,4 +451,32 @@ background-color: #000;
 /* 마지막 li만 두껍게 */
 .blink li:last-child a{
     font-weight: bold;
+}
+
+/* 위로가기 버튼 */
+.tbtn{
+    position: fixed;
+    bottom: -35px;
+    right: 75px;
+    width: 48px;
+    height: 35px;
+    text-align: center;
+    line-height: 35px;
+    background-color: #333;
+    border-radius: 4px 4px 0 0;
+    /* 둥근모서리: 왼위 오른위 오른아래 왼아래 */
+    color: #fff;
+    z-index: 99999;
+    opacity: 0;
+    transition: all .3s,
+    background-color .3s;
+}
+/* 위로이동버튼에 .on주기 */
+.tbtn.on{
+    bottom: 0;
+    opacity: 1;
+}
+/* 탑버튼 마우스 오버시 */
+.tbtn:hover{
+    background-color: #f00;
 }
