--- a/Pj_BIFF/main.css
+++ b/Pj_BIFF/main.css
@@ -78,15 +78,26 @@ body * {
     height: 100%;
     right: 30px;
 
-    font-size: 20px;
-    font-weight: bold;
-
     display: flex;
     justify-content: flex-end;
+    align-items: center
+
 }
 
-.ham a {
+.menu {
+    width: 45px;
+    height: 45px;
+    text-align: center;
+    font-size: 40px;
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 50%;
+    background-color: rgb(250, 250, 253);
+    padding: 0;
+    cursor: pointer;
+}
 
+.gosub img{
+    text-align: center;
 }
 
 
