--- a/Pj_BIFF/main.css
+++ b/Pj_BIFF/main.css
@@ -4,7 +4,9 @@
 html,
 body,
 h1,
-h2 {
+h2,
+ul,
+ol {
     margin: 0;
     padding: 0;
 }
@@ -73,13 +75,13 @@ body * {
 .gnb>.lb{
     position: absolute;
     width: 200px;
-    left: 32%;
+    left: 30%;
 }
 
 .gnb>.rb{
     position: absolute;
     width: 200px;
-    left: 53%;
+    left: 60%;
 }
 
 .gnb li{
@@ -201,9 +203,6 @@ body * {
     cursor: pointer;
 }
 
-.gosub img{
-    text-align: center;
-}
 
 
 
@@ -215,22 +214,28 @@ body * {
     object-fit: cover;
     overflow: hidden;
     text-align: center;
-
     /* filter: brightness(75%); */
 }
 
 #gosub {
     position: absolute;
-    top: 75%;
-    left: 50%;
+    top: 82%;
+    /* left: 50%; */
     /* 부모는 화면 */
     transform: translate(-50%, -50%);
     /* 정중앙으로 이동 */
     z-index: 1;
+    left: calc(55% - 22.5px);
+}
+
+#gosub img{
+    position: absolute;
+    border-radius: 50%;
+    left: -33%;
 }
 
 #gosub span {
-    color: #fff;
+    color: rgb(37, 37, 34);
     display: block;
     /* 옆에 아무도 못오고 width는 끝까지 가기 */
     text-align: center;
@@ -247,14 +252,23 @@ body * {
     position: relative;
 }
 
+.ad{
+    position: absolute;
+    width: 700px;
+    height: 50px;
+    text-align: center;
+    left: 25%;
+    top: 15%;
+}
+
 .mlist {
     position: absolute;
     bottom: 20%;
     left: 50%;
     transform: translateX(-50%);
-    width: 90%;
-    height: 50%;
-    outline: 4px dashed rgb(38, 0, 255);
+    width: 100%;
+    height: 55%;
+    outline: 2px dashed rgb(38, 0, 255);
 }
 
 .mlist ul{
@@ -294,7 +308,7 @@ body * {
 
     /* 글자셋팅 */
     font-family: 'Cute Font', cursive;
-    font-size: 14px;
+    font-size: 15px;
     line-height: 25px;
     text-align: center;
 
@@ -318,7 +332,6 @@ body * {
     font-size: 17px;
     letter-spacing: -1px;
     margin-top: 30%;
-
 }
 
 
