--- a/Pj_BIFF/main.css
+++ b/Pj_BIFF/main.css
@@ -255,10 +255,11 @@ body * {
 .ad{
     position: absolute;
     width: 700px;
-    height: 50px;
+    height: 40px;
     text-align: center;
     left: 25%;
     top: 15%;
+    font-size: 35px;
 }
 
 .mlist {
