--- a/Pj_BIFF/main.css
+++ b/Pj_BIFF/main.css
@@ -53,13 +53,16 @@ body * {
     z-index: 999;
 }
 
-.log{
+.logo{
+    position: absolute;
     top: 5%;
     left: calc(50% - 22.5px);
-    position: absolute;
     width: 45px;
     height: 45px;
-    text-align: center;
+    z-index: 10;
+}
+.logo img{
+    width: 100%;
     border-radius: 50%;
 }
 
@@ -72,17 +75,50 @@ body * {
     margin-top: 10px;
 }
 
-.gnb>.lb{
+.gnb{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 0;
+    height: 20px;
+    margin: 0 auto;
+    overflow: hidden;
+    display: flex;
+
+    animation: menuAni 1s ease-out 1s forwards;
+}
+@keyframes menuAni {
+    to{
+        width: 500px;
+    }
+}
+/* 메뉴 양쪽 등분할 박스 */
+.gnb>div{
+    position: relative;
+    flex: 1;
+    overflow: hidden;
+}
+.gnb .lb{
     position: absolute;
     width: 200px;
-    left: 30%;
+    left: 0;
+    top: 0;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
 
-.gnb>.rb{
+.gnb .rb{
     position: absolute;
     width: 200px;
-    left: 60%;
+    right: 0;
+    top: 0;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
+
 
 .gnb li{
     font-size: 15px;
