--- a/001.HTML/008.VOGUE_PJ/002.site/css/core.css
+++ b/001.HTML/008.VOGUE_PJ/002.site/css/core.css
@@ -154,6 +154,10 @@
     /* 패딩크기도 최대 50px을 유지하다가 화면크기에 맞춤 */
 }
 
+.cbx h2 small{
+    font-size: 14px;
+}
+
 /* 3개로 구성되는 컨텐츠박스 */
 /* flex 적용하기 */
 .fbx {
