--- a/Pj_BIFF/main.css
+++ b/Pj_BIFF/main.css
@@ -24,8 +24,14 @@ a {
     text-decoration: none;
 }
 
+body{
+    background-color: #000;
+    color: #fafafa;
+}
+
 body * {
     outline: 1px dashed rgb(158, 158, 158);
+    /* background-color: #000; */
 }
 
 .ibx {
@@ -37,6 +43,12 @@ body * {
     width: 100%;
     height: 100vh;
 }
+
+.cont1{
+    width: 100%;
+    height: 100vh;
+}
+
 
 /******************************************* 상단 *******************************************/
 .ibx>.cont1:first-child{
@@ -60,10 +72,12 @@ body * {
     width: 45px;
     height: 45px;
     z-index: 10;
+    background-color: transparent;
 }
 .logo img{
     width: 100%;
     border-radius: 50%;
+    
 }
 
 .gnb ul{
@@ -134,7 +148,9 @@ body * {
 
     display: flex;
     justify-content: flex-end;
-    align-items: center
+    align-items: center;
+    background-color: transparent;
+    
 }
 
 .xbtn {
@@ -235,6 +251,10 @@ body * {
     width: 100%;
 } */
 
+.con1{
+    position: relative;
+}
+
 .Mvideo {
     width: 100%;
     height: 100%;
@@ -247,29 +267,29 @@ body * {
 #gosub {
     position: absolute;
     top: 90%;
-    /* left: 50%; */
+    left: 50%;
     /* 부모는 화면 */
     transform: translate(-50%, -50%);
     /* 정중앙으로 이동 */
     z-index: 1;
-    left: calc(50% - 22.5px);
+    /* left: calc(50% - 22.5px); */
 }
 
 #gosub img{
     position: absolute;
-    border-radius: 50%;
-    left: -33%;
-    bottom: 30%;
+    /* left: -33%; */
+    /* bottom: 30%; */
+    clip-path: circle(141px at 50% 53%);
+    transform: translate(-28%, -50%);
+
 }
 
 #gosub span {
     color: rgb(37, 37, 34);
     display: block;
-    /* 옆에 아무도 못오고 width는 끝까지 가기 */
     text-align: center;
-    /* 글자중앙 */
-    font: bold 34px/40px 'Audiowide';
-    /* font: 스두크/줄체; */
+    
+    /* font: bold 34px/40px 'Audiowide'; */
 }
 
 /******************************************* Cont2 *******************************************/
@@ -293,7 +313,7 @@ body * {
     bottom: 20%;
     left: 50%;
     transform: translateX(-50%);
-    width: 100%;
+    width: 85%;
     height: 55%;
     outline: 2px dashed rgb(38, 0, 255);
 }
