--- a/Pj_BIFF/main.css
+++ b/Pj_BIFF/main.css
@@ -49,6 +49,10 @@ body * {
     height: 100vh;
 }
 
+/* *, *::before, *::after{
+    box-sizing: border-box;
+} */
+
 
 /******************************************* 상단 *******************************************/
 .ibx>.cont1:first-child{
@@ -509,6 +513,162 @@ body * {
     letter-spacing: -1px;
     margin-top: 20%;
 }
+
+/******************************************* Cont4 ******************************************/
+.tbl_schedule .sch_li:first-child{
+    padding-top: 0;
+    border-top: 0;
+}
+
+.tbl_schedule .sch_li{
+    position: relative;
+    display: block;
+    padding: 20px 0;
+    border-top: 1px dashed #e0e0e0;
+}
+
+.tbl_schedule .sch_li:before{
+    clear: both;
+    display: block;
+    content: '';
+}
+
+.tbl_schedule .sch_li .sch_li_tit{
+    width: 100%;
+    font-size: 18px;
+    color: #111;
+    background: #f5f5f5;
+    font-weight: 500;
+    padding: 15px;
+    letter-spacing: -1px;
+    border: 1px solid #e0e0e0;
+    border-bottom: none;
+}
+
+.tbl_schedule .sch_li .sch_it.blank_wrap{
+    background: #f8f8f8;
+    border-top: 1px solid #e0e0e0 !important;
+}
+
+.tbl_schedule .sch_li .sch_it{
+    position: relative;
+    display: block;
+    float: left;
+    padding: 15px;
+    width: 16.6%;
+    border: 1px solid #e0e0e0;
+    height: 215px;
+}
+
+.tbl_schedule .sch_li .sch_it .sch_it_blank{
+    display: block;
+    width: 100%;
+    padding: 0;
+}
+
+.tbl_schedule .sch_li .sch_it .code{
+    position: absolute;
+    top: 15px;
+    right: 10px;
+    font-size: 13px;
+    line-height: 1.5;
+    border: 0px solid #eddfbf;
+    color: #eef2ff;
+    font-weight: bold;
+    padding: 2px 6px;
+    border-radius: 50%;
+}
+
+.tbl_schedule .sch_li .sch_it .time{
+    font-size: 18px;
+    line-height: 1.5;
+    display: inline-block;
+    margin-top: 0;
+}
+
+.en{
+    letter-spacing: 0 !important;
+}
+
+.tbl_schedule .sch_li .sch_it .film_tit{
+    line-height: 1.5;
+    height: 72px;
+    overflow: hidden;
+}
+.film_tit a{
+    color: #fff;
+}
+
+.tbl_schedule .sch_li .sch_it .film_tit .film_tit_kor{
+    display: block;
+    font-size: 18px;
+    line-height: 1.45;
+    word-break: keep-all;
+    margin-bottom: 6px;
+}
+
+.tbl_schedule .sch_li .sch_it .film_tit .film_tit_eng{
+    display: block;
+    font-size: 13px;
+    color: #888;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 90%;
+}
+
+.tbl_schedule .sch_li .sch_it .grade{
+    position: absolute;
+    bottom: 15px;
+    left: 15px;
+    margin-top: 15px;
+}
+
+.grade{
+    display: inline-block;
+    background-position: 0 center;
+    background-repeat: no-repeat;
+    font-size: 0;
+    vertical-align: middle;
+}
+
+.tbl_schedule .sch_li .sch_it .grade > span{
+    margin-right: 3px;
+}
+
+.ico_grade.ico_15{
+    background-image: url(./img/ico_15.png);
+}
+
+.ico_grade.ico_gv{
+    background-image: url(./img/ico_gv.png);
+}
+
+.ico_grade{
+    position: relative;
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    vertical-align: middle;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
+
+.tbl_schedule .sch_li .sch_it:last-child{
+    border-right: 1px solid #e0e0e0 !important;
+}
+
+.tbl_schedule .sch_li:before,
+.tbl_schedule .sch_li:after{
+    clear: both;
+    display: block;
+    content: '';
+}
+
+.tbl_schedule .sch_li:nth-child(even){
+    background: #fff;
+}
+
 
 
 /******************************************* 하단 *******************************************/
